desafio completo, botones funcionales

--- a/base.html
+++ b/base.html
@@ -18,10 +18,10 @@
               <p>Precio base: $<span class="precio-inicial"></span> </p>
         
               <p>Cantidad:
-                <span class="cantidad">0</span>
-                <button 
+                <span class="cantidad"></span>
+                <button id="mas"
                 >+</button>
-                <button
+                <button id="menos"
                 >-</button>
               </p>
             </div>
